--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ DATABASE_URL=postgresql://postgres:12345678@database-1.cw90u26e8ph8.us-east-1.rd
 
 # إعدادات Redis (إذا كنت تستخدمها)
 REDIS_URL=redis://localhost:6379/0
+
+
+AWS_ACCESS_KEY=AKIASVLKCQGWAUAUG4Q3
+AWS_SECRET_KEY=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
+S3_BUCKET_NAME=jumla-files-storage
+S3_REGION=me-central-1
